add loadTableConfig